testsuite/escript/interstring/interstring02.err
interstring02.src:1:17: error: token recognition error at: '";\r\n'
